--- a/progress-of_essay_analysis/1-1/index.html
+++ b/progress-of_essay_analysis/1-1/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<nav>
-			+ | Home | Essay | Example | Analysis Guidelines | Structure Analysis
+			+ | <a href="index.html">Home</a> | <a href="example.html">Essay Example</a> | <a href="guidelines.html">Analysis Guidelines</a> | <a href="analysis.html">Structure Analysis</a>
 		</nav>
 		<article>
 			<h1>Expository Essay</h1>
