--- a/progress-of_essay_analysis/2-1/example.html
+++ b/progress-of_essay_analysis/2-1/example.html
@@ -22,7 +22,7 @@
 		<section>
 			<h3>[Sec. #1]</h3>
 			<p>
-				Learning your odds of eventually developing dementia — a pressing concern for many, especially those with a family history of it — requires medical testing and counseling. But what if everyday behavior, like overlooking a couple of credit card payments or habitually braking while driving, could foretell your risk?► <b>A spate of </b>experiments is underway to explore that possibility, reflecting the growing awareness that the pathologies underlying dementia can begin years or even decades before symptoms emerge.
+				Learning your odds of eventually developing dementia — a pressing concern for many, especially those with a family history of it — requires medical testing and counseling. But what if everyday behavior, like overlooking a couple of credit card payments or habitually braking while driving, could foretell your risk?&#9658; <b>A spate of </b>experiments is underway to explore that possibility, reflecting the growing awareness that the pathologies underlying dementia can begin years or even decades before symptoms emerge.
 			</p>
 		</section>
 	</article>
