--- a/progress-of_essay_analysis/2-1/example.html
+++ b/progress-of_essay_analysis/2-1/example.html
@@ -24,6 +24,12 @@
 			<p>
 				Learning your odds of eventually developing dementia — a pressing concern for many, especially those with a family history of it — requires medical testing and counseling. But what if everyday behavior, like overlooking a couple of credit card payments or habitually braking while driving, could foretell your risk?&#9658; <b>A spate of </b>experiments is underway to explore that possibility, reflecting the growing awareness that the pathologies underlying dementia can begin years or even decades before symptoms emerge.
 			</p>
+			<h3>[Sec. #2]</h3>
+			<p>
+				“Early detection is key for intervention, at the stage when that would be most effective,” said Sayeh Bayat, the lead author of a driving study funded by the National Institutes of Health and conducted at Washington University in St. Louis.&#9658; Such efforts could help identify potential volunteers for clinical trials, researchers say, and help protect older people against financial abuse and other dangers.
+
+				In recent years, many once-promising dementia drugs, particularly for Alzheimer’s disease, have failed in trials. One possible reason, researchers say, is that the drugs are administered too late to be helpful. Identifying risks earlier, when the brain has sustained less damage, could create a pool of potential participants with “preclinical” Alzheimer’s disease, who could then test preventive measures or treatments. &#9658; It could also bring improvements in daily life. “We could support people’s ability to drive longer, and have safer streets for everyone,” Ms. Bayat offered as an example.
+			</p>
 		</section>
 	</article>
 
