--- a/examples_excersises-from-class/3-1/index.html
+++ b/examples_excersises-from-class/3-1/index.html
@@ -4,13 +4,16 @@
 	<title>Example 3-1: Import Google fonts</title>
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Open+Sans&display=swap');
+		body {
+			font-family: Open sans, sans-serif;
+		}
 </style> 
 </head>
 <body>
 	<p>
 		This line uses a sans-serif font.
 	</p>
-	<p>
+	<p style="font-family: Merriweather, serif;">
 		This line uses a serif fonts.
 	</p>
 </body>
