--- a/examples_excersises-from-class/3-1/index.html
+++ b/examples_excersises-from-class/3-1/index.html
@@ -2,8 +2,9 @@
 <html lang="en-us">
 <head>
 	<title>Example 3-1: Import Google fonts</title>
+	<link rel="stylesheet" type="text/css" href="">
 	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Open+Sans&display=swap');
+		/*@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Open+Sans&display=swap');*/
 		body {
 			font-family: Open sans, sans-serif;
 		}
