--- a/examples_excersises-from-class/3-2/index.html
+++ b/examples_excersises-from-class/3-2/index.html
@@ -19,4 +19,11 @@
 		<p style="font-size: 2vw">
 			Relative: 2 viewport width.
 		</p>
+		<div style="font-size: 4vh">
+			Ralative: 4% viewport height.
+			<p style="font-size:50%">
+				Relative: 50% of the parent font
+			</p>
+		</div>
 	</body>
+	</html>
