--- a/examples_excersises-from-class/3-3/index.html
+++ b/examples_excersises-from-class/3-3/index.html
@@ -5,10 +5,10 @@
 	<title>Eample 3-3: Border-box vs. Content-box</title>
 </head>
 <body>
-	<div style="background-color: yellow;width: 300px; border: 10px solid block; box-sizing: border-box;">
+	<div style="background-color: yellow;width: 300px; border: 10px solid black; box-sizing: border-box;">
 		This is a border-box.
 	</div>
-	<div style="background-color: pink; width: 300px; border: 10px solid block; box-sizing: content-box;">
+	<div style="background-color: pink; width: 300px; border: 10px solid black; box-sizing: content-box;">
 		This is a content-box. 
 	</div>
 </body>
