unequal  margin and padding

--- a/examples_excersises-from-class/3-4/index.html
+++ b/examples_excersises-from-class/3-4/index.html
@@ -11,5 +11,11 @@
 	<div style="background-color:green; width:300px; padding: 0; Margin: 20px">
 		Demonstrating margins.
 	</div>
+	<div style="background-color:red; width:300px;padding: 10px 5px 20px 0; Margin:0;">
+		Demenstrating unequal paddings.
+	</div>
+	<div style="background-color: orange; width:300px; padding:0; margin: 10px 5px 20px 0;">
+		Demenstrating unequal margins.
+	</div>
 </body>
 </html>
