not finished notetaking

--- a/examples_excersises-from-class/3-4/index.html
+++ b/examples_excersises-from-class/3-4/index.html
@@ -3,6 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<title>Example 3-4: Margin vs. Padding</title>
+	<style>
+		/* 
+		padding: 10px 20px......;
+		......
+
+		*/
+	</style>
 </head>
 <body>
 	<div style="background-color:pink; width:300px; padding: 20px; Margin: 0">
