--- a/examples_excersises-from-class/3-5/index.html
+++ b/examples_excersises-from-class/3-5/index.html
@@ -3,6 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<title>Example 3-5: Resetting</title>
+	<style>
+		/*  
+		
+		* = wild card = everything  
+
+		*/
+		 * {
+		 	margin: 0;
+		 	padding: 0;
+		 	box-sizing: border-box;
+		 }
+	</style>
 </head>
 <body>
 	<article style="background-color: yellow;">
