--- a/examples_excersises-from-class/4-1/index.html
+++ b/examples_excersises-from-class/4-1/index.html
@@ -10,12 +10,17 @@
 			top: 50px;
 			left: -30px;
 		}
+		article{
+			background-color: crimson;
+		}
 	</style>
 </head>
 <body style="background-color: pink;">
 	<div style="background-color:red">
 		this is a division block
 	</div>
-
+	<article>
+		another article 
+	</article>
 </body>
 </html>
