--- a/personal/index.html
+++ b/personal/index.html
@@ -43,7 +43,7 @@
 			margin-left: 20%;
 		}
 		article{
-			background-color:  #fafdff ;
+			background-color:  #fafdff ;/*可以偏米色*/
 			border-radius: 5px;
 			padding: 2% 4%;
 			position: relative;
