--- a/personal/featured_article_en.html
+++ b/personal/featured_article_en.html
@@ -63,7 +63,7 @@
 			margin-bottom: 1%;
 		}
 
-	-*/
+*/
 
 		article > p{
 			margin: 4% 0;
@@ -96,13 +96,13 @@
 
 <body>
 	<nav>
-		<a>Home</a>
-		<a>AO3!! </a>
+		<a href="index.html">Home</a>
+		<a href="featured_article_en">AO3!! </a>
 		<a>Item 3</a>
-		<a>語言：中文</a>
+		<a href="featured_article_cn">切至中文</a>
 	</nav>
 	<div>
-	<article>
+	<article style="text-align: center;padding: 3% 0;">
 		<h1>
 			The fantastic world of AO3
 		</h1>
