--- a/personal/index.html
+++ b/personal/index.html
@@ -78,7 +78,7 @@
 <body>
 	<nav>
 		<a>Home</a>
-		<a href="featured_article_en">AO3!!</a>
+		<a href="featured_article_en.html">AO3!!</a>
 		<a>Item 3</a>
 		<a>(語言切換)</a>
 	</nav>
