--- a/personal/featured_article_cn.html
+++ b/personal/featured_article_cn.html
@@ -97,9 +97,9 @@
 <body>
 	<nav>
 		<a href="index.html">Home</a>
-		<a href="featured_article_cn">AO3!! </a>
+		<a href="featured_article_cn.html">AO3!! </a>
 		<a>Item 3</a>
-		<a href="featured_article_en">To EN</a>
+		<a href="featured_article_en.html">To EN</a>
 	</nav>
 	<div>
 	<article style="text-align: center;padding: 3% 0;">
