--- a/personal/index_cn.html
+++ b/personal/index_cn.html
@@ -75,33 +75,33 @@
 		}
 	</style>
 </head>
-<!-- 首頁/home -英文版  index.html-->
+<!-- 首頁/home -中文版  index_cn.html-->
 <body>
 	<nav>
 		<a>Home</a>
 		<a href="featured_article_en.html">AO3!!</a>
 		<a>Item 3</a>
-		<a href="index_cn.html">切至中文</a>
+		<a href="index.html">To EN</a>
 	</nav>
 	<div>
 	<article>
 		<h1>
-			About me
+			自我介紹
 		</h1>
 	</article>
 
 	<article>
 		<p>
-			I am Anna, a junior in National Tsing Hua University who majors in Foreign Languages and Literature. I like to read all kinds of books, everything ranging from fiction to economics can appear in my booklist. In my free time, I also enjoy crafting, sewing, and drawing. 
+			大家好，我是Anna，目前大三，就讀國立清華大學外國語文學系。我喜歡閱讀，涉獵的領域五花八門，書單上什麼都有：奇幻、武俠、經濟、心理等都曾名列其中。閒暇時，我也喜歡做手工藝、縫紉和畫畫。
 		</p>
 		<p>
-			After I graduate, I wish to work in a technology company such as Google and use my linguistics knowledge to help the communication between human and computer smoother.
+			清大外文以數量眾多且內容豐富的語言學課程著名，我每學期都修好幾堂語言學領域的課，目標是畢業後至google之類的科技公司工作，善用語言學讓人類跟電腦能更順暢的溝通。
 		</p>
 		<p>
-			To reach my goal, I take a lot of linguistics courses each semester, determined to make the most of my time at college, since the foreign language and literature department in National Tsing Hua University is famous for its abundant related courses and resources in linguistics. 
+			除了人類語言之外，我也需要熟悉程式語言，所以我這學期去選修資工系開設的python程式語言入門。幸好清大選課自由，要修其他系所的課程門檻也很低，我才能修到這堂程式語言入門。 
 		</p>
 		<p>
-			Our school policy makes it easy for students to take classes in other departments, so I am now learning basic programming skills in Introduction to Programming in Python, which is a course offered by the Department of Information Technology. 
+			之後，我想在科技業工作，並專攻人類語言跟人工智慧，所以熟悉python後，我會開始試著學習如何把程式語言跟人類語言相結合。
 		</p>
 		<p>
 			After I familiarize myself with Python, I will start to work on combining my knowledge of human language and computer language, aiming to work in the field of artificial intelligence and human language in the future.
