--- a/personal/index.html
+++ b/personal/index.html
@@ -33,6 +33,8 @@
 			position: relative;
 			width: 100px;
 			height: 30px;
+			text-decoration: none;
+			color: black;
 			line-height: 30px;
 			text-align: center;
 			margin: 10%;
@@ -78,7 +80,7 @@
 <!-- 首頁/home -英文版  index.html-->
 <body>
 	<nav>
-		<a>Home</a>
+		<a href="index.html">Home</a>
 		<a href="featured_article_en.html">AO3!!</a>
 		<a>Item 3</a>
 		<a href="index_cn.html">切至中文</a>
