--- a/personal/index_cn.html
+++ b/personal/index_cn.html
@@ -33,6 +33,8 @@
 			position: relative;
 			width: 100px;
 			height: 30px;
+			text-decoration: none;
+			color: black;
 			line-height: 30px;
 			text-align: center;
 			margin: 10%;
@@ -78,7 +80,7 @@
 <!-- 首頁/home -中文版  index_cn.html-->
 <body>
 	<nav>
-		<a>Home</a>
+		<a href="index_cn.html">首頁</a>
 		<a href="featured_article_en.html">AO3!!</a>
 		<a>Item 3</a>
 		<a href="index.html">To EN</a>
@@ -103,9 +105,7 @@
 		<p>
 			之後，我想在科技業工作，並專攻人類語言跟人工智慧，所以熟悉python後，我會開始試著學習如何把程式語言跟人類語言相結合。
 		</p>
-		<p>
-			After I familiarize myself with Python, I will start to work on combining my knowledge of human language and computer language, aiming to work in the field of artificial intelligence and human language in the future.
-		</p>
+
 	</article>
 
 	</div>
