--- a/personal/featured_article_cn.html
+++ b/personal/featured_article_cn.html
@@ -34,6 +34,8 @@
 			position: relative;
 			width: 100px;
 			height: 30px;
+			text-decoration: none;
+			color: black;
 			line-height: 30px;
 			text-align: center;
 			margin: 10%;
@@ -96,7 +98,7 @@
 
 <body>
 	<nav>
-		<a href="index.html">Home</a>
+		<a href="index.html">首頁</a>
 		<a href="featured_article_cn.html">AO3!! </a>
 		<a>Item 3</a>
 		<a href="featured_article_en.html">To EN</a>
