--- a/personal/featured_article_en.html
+++ b/personal/featured_article_en.html
@@ -34,6 +34,8 @@
 			position: relative;
 			width: 100px;
 			height: 30px;
+			text-decoration: none;
+			color: black;
 			line-height: 30px;
 			text-align: center;
 			margin: 10%;
