--- a/personal/featured_article_en.html
+++ b/personal/featured_article_en.html
@@ -27,6 +27,8 @@
 
 		nav{
 			position: fixed;
+			top: 1%;
+			left: 0.5%;
 		}
 
 		nav>a{
@@ -78,8 +80,8 @@
 			border-radius: 5px;
 			/*padding: 2% 4%;*/
 			position: relative;
-			bottom: -35px;
-			margin-left: -7%;
+			bottom: -25px;
+			margin-left: -8%;
 			padding: 2% 1%;
 			text-align: center;
 			z-index:2;
@@ -241,10 +243,10 @@
 		</p>
 		
 	</article>
-</div>
 
-	<figure style="text-align: center; "><!--讓圖片置中，位置標準-文字 -->
-			<img id="last" src="img/city.png" />
+</div  style="margin: auto;line-height: 0;" >
+	<figure><!--讓圖片置中，位置標準-文字 -->
+			<img style="vertical-align:middle" id="last" src="img/city.png" />
 	</figure>
 </body>
 </html>
