--- a/personal/featured_article_en.html
+++ b/personal/featured_article_en.html
@@ -19,7 +19,7 @@
 		body {
 			overflow-x: hidden;
 			overflow-y: auto;
-			background-color: #ebf5fb;
+			background-color: #EAD7D7;
 			/*font-family: Lora, serif;*/
 			font-size: 3.5vh;
 			line-height: 5vh;
@@ -32,14 +32,19 @@
 		}
 
 		nav>a{
-			background-color: #F3EFE2;/*先暫時標出邊界*/
+			border-style: solid;
+			border-width: 1px;
+			border-radius: 2px;
+			border-color: #bda275;
+			background-color: #f5e7cf;
+			color: black;
 			display:block;
 			border-radius: 5px;
 			position: relative;
-			width: 100px;
+			width: 110px;
 			height: 30px;
 			text-decoration: none;
-			color: black;
+			font-weight: bold;
 			line-height: 30px;
 			text-align: left;
 			margin: 5% 10% 7% 35%;
@@ -62,7 +67,7 @@
 			position: absolute;
 			width: 12%;
 			margin-left: 84%;
-			background-color: #F6F9FB;
+			background-color: #fcf8f8;
 			padding: 1%;
 			border-radius: 5px;
 			border-style: dashed;
@@ -103,7 +108,7 @@
 		}
 
 		article{
-			background-color:  #fafdff ;/*可以偏米色*/
+			background-color:  #fefbfb ;/*可以偏米色*/
 			border-radius: 5px;
 			padding: 2% 4%;
 			position: relative;
@@ -119,10 +124,9 @@
 
 		div > h2{
 			width: 30%;
-			/*margin-left: 15%;*/
-			background-color:  #40e0d0;
+			color: white;
+			background-color:  #980303;
 			border-radius: 5px;
-			/*padding: 2% 4%;*/
 			position: relative;
 			bottom: -25px;
 			margin-left: -8%;
@@ -300,7 +304,7 @@
 
 </div  style="margin: auto;line-height: 0;" >
 	<figure><!--讓圖片置中，位置標準-文字 -->
-			<img style="vertical-align:middle" id="last" src="img/city.png" />
+			<img style="vertical-align:middle" id="last" src="img/red_city.png" />
 	</figure>
 </body>
 </html>
