--- a/personal/featured_article_en.html
+++ b/personal/featured_article_en.html
@@ -152,7 +152,7 @@
 
 	<nav>
 		<img src="img/menu.png" alt="menu" style="position: absolute;height: 120%;">
-		<a href="index_en.html" style="margin-top: 13%;"><img src="img/fire.png">Home</a>
+		<a href="index_en.html" style="margin-top: 3vh;"><img src="img/fire.png">Home</a>
 		<a href="featured_article_en.html"><img src="img/fire.png">AO3!! </a>
 		<a href="featured_article_cn.html"><img src="img/fire.png">中文版</a>
 	</nav>
