better access to  menu

--- a/personal/featured_article_en.html
+++ b/personal/featured_article_en.html
@@ -47,11 +47,12 @@
 			background-color: #f5e7cf;
 			color: black;
 			width: 90%;
+			height: 7vh;
 			font-weight: bold;
 			font-size: 1.7vw;
-			line-height: 100%;
+			vertical-align:middle
 			text-align: left;
-			padding: 3% 9% 1% 9%;
+			padding: 1vh 9% 1vh 9%;
 			z-index: 2;
 		}
 
@@ -191,10 +192,10 @@
 <body>
 
 	<nav class="menu">
-		<img src="img/menu.png" alt="menu" style="position: relative;z-index: 0;">
-		<a href="index_en.html" style="top: 10%;"><img src="img/fire.png">Home</a>
-		<a href="featured_article_en.html" style="top: 33%;"><img src="img/fire.png">AO3!! </a>
-		<a href="featured_article_cn.html" style="top: 55%;"><img src="img/fire.png">中文版</a>
+		<img src="img/menu.png" alt="menu" style="position: relative;height: 35vh; z-index: 0;">
+		<a href="index_en.html" style="top: 9%;"><img src="img/fire.png">Home</a>
+		<a href="featured_article_en.html" style="top: 34%;"><img src="img/fire.png">AO3!! </a>
+		<a href="featured_article_cn.html" style="top: 59%;"><img src="img/fire.png">中文版</a>
 	</nav>
 
 	<nav>
