--- a/personal/featured_article_en.html
+++ b/personal/featured_article_en.html
@@ -72,18 +72,18 @@
 			position: absolute;
 			display:block;
 			left: 4%;
-			border-style: solid;
-			border-width: 1px;
+			border-style: double;
+			border-width: 3px;
 			border-radius: 5px;
 			border-color: #bda275;
-			background-color: #f5e7cf;
+			background-color:#f5e7cf;
 			color: black;
 			width: 100%;
 			font-weight: bold;
 			font-size: 1.6vw;
 			line-height: 100%;
 			text-align: center;
-			padding: 3% 1% 3% 2%;
+			padding: 2vh 1% 2vh 2%;
 			z-index: 2;
 		}
 
@@ -94,10 +94,10 @@
 
 		.scrollbar-line {
 			border-left: 2px solid #be0303;
-			height: 45vh;
+			height: 43vh;
 			position: fixed;
 			left: 1.3%;
-			top: 37%;
+			top: 38%;
 		}
 
 		.right-picture{
@@ -201,16 +201,16 @@
 	<nav>
 	<div class="scrollbar-line"></div>
 	<div class="scrollbar">
-		<a href="#p1_intro" style="margin-top: 7vh">
+		<a href="#p1_intro" style="margin-top: 8vh">
 			<img src="img/fire.png" >Intro
 		</a>
 		<a href="#p2_start" style="margin-top: 21vh;">
 			<img src="img/fire.png">Where to start
 		</a>
-		<a href="#p3_sharpen" style="margin-top: 36vh;">
+		<a href="#p3_sharpen" style="margin-top: 34vh;">
 			<img src="img/fire.png">Sharpen your English skill
 		</a>
-		<a href="#p4_rec" style="margin-top: 52vh;			font-size: 1.5vw; padding: 3% 0 3% 7%;" >
+		<a href="#p4_rec" style="margin-top: 49vh;			font-size: 1.5vw; padding: 2vh 0 2vh 7%;" >
 			<img src="img/fire.png">Recommendation
 		</a>
 	</div>
