--- a/personal/index_cn.html
+++ b/personal/index_cn.html
@@ -1,58 +1,14 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="zh-TW">
 <head>
 	<meta charset="utf-8">
 	<title>autobiogrophy</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="home.css">	
 	<style>
-		*{
-			margin: 0;
-			padding: 0;
-			box-sizing: border-box;
-		}
-
-		html{
-			height: 100%;
-			width: 100%;
-		}
-
-		body {
-			overflow-x: hidden;
-			overflow-y: auto;
-			background-color: #ebf5fb;
-			/*font-family: Lora, serif;*/
-			font-size: 3.5vh;
-			line-height: 5vh;
-		}
-
-		nav{
-			position: fixed;
-		}
-		a{
-			background-color: turquoise;/*先暫時標出邊界*/
-			display:block;
-			position: relative;
-			width: 100px;
-			height: 30px;
-			text-decoration: none;
-			color: black;
-			line-height: 30px;
-			text-align: center;
-			margin: 10%;
-		}
-
-		div{
-			width: 60%;
-			margin-left: 20%;
-		}
 		article{
 			background-color:  #fafdff ;/*可以偏米色*/
-			border-radius: 5px;
-			padding: 2% 4%;
-			position: relative;
-			left: 50%;
 			margin: 2%;
-			text-align: left;
-			transform: translateX(-50%);
 		}
 
 		article:first-of-type {
@@ -62,30 +18,21 @@
 			margin-bottom: 1%;
 		}
 
-		article > p{
-			margin: 4% 0;
-		}
 		article>p:first-of-type{
 			margin-top: 2%;
 		}
-		figure > img{
-			width: 100%;
-			height: auto;
-			position: relative;
-			margin-top:3%;
-			margin-bottom: 0;
-		}
+
 	</style>
 </head>
 <!-- 首頁/home -中文版  index_cn.html-->
 <body>
 	<nav>
-		<a href="index_cn.html">首頁</a>
-		<a href="featured_article_en.html">AO3!!</a>
-		<a>Item 3</a>
-		<a href="index.html">To EN</a>
+		<img src="img/menu.png" alt="menu">
+		<a href="index_cn.html" ><img src="img/fire.png">首頁</a>
+		<a href="featured_article_cn.html"><img src="img/fire.png">AO3!! </a>
+		<a href="index_en.html"><img src="img/fire.png">To EN</a>
 	</nav>
-	<div>
+	<div class="article">
 	<article>
 		<h1>
 			自我介紹
