--- a/personal/featured_article_en.html
+++ b/personal/featured_article_en.html
@@ -4,185 +4,20 @@
 	<meta charset="utf-8">
 	<title>featured article - en</title>
 	<!-- 英文版!!! -->
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="feature.css">
 	<style>
-		*{
-			margin: 0;
-			padding: 0;
-			box-sizing: border-box;
+		
+		nav>a{
+			font-family: Inter, sans-serif;
 		}
 
-		html{
-			height: 100%;
-			width: 100%;
+		h1,h2,h3 {
+			font-family:IBM Plex Serif, serif;
 		}
 
 		body {
-			overflow-x: hidden;
-			overflow-y: auto;
-			background-color: #EAD7D7;
-			/*font-family: Lora, serif;*/
-			font-size: 3.5vh;
-			line-height: 5vh;
-		}
-
-		nav a{
-			text-decoration: none;
-		}
-
-		.menu{
-			position: fixed;
-			top: 1%;
-			left: 0.5%;
-			width: 11%;
-		}
-
-		.menu>a{
-			position: absolute;
-			display:block;
-			left: 30%;
-			border-style: solid;
-			border-width: 1px;
-			border-radius: 5px;
-			border-color: #bda275;
-			background-color: #f5e7cf;
-			color: black;
-			width: 90%;
-			height: 7vh;
-			font-weight: bold;
-			font-size: 1.7vw;
-			vertical-align:middle
-			text-align: left;
-			padding: 1vh 9% 1vh 9%;
-			z-index: 2;
-		}
-
-		a>img{
-			width: 2vw;
-			vertical-align: middle;
-			padding: 0 4% 1% 0;
-		}
-
-		.scrollbar{
-			position: fixed;
-			top: 30%;
-			width: 14%;
-		}
-
-		.scrollbar > a{
-			position: absolute;
-			display:block;
-			left: 4%;
-			border-style: double;
-			border-width: 3px;
-			border-radius: 5px;
-			border-color: #bda275;
-			background-color:#f5e7cf;
-			color: black;
-			width: 100%;
-			font-weight: bold;
-			font-size: 1.6vw;
-			line-height: 100%;
-			text-align: center;
-			padding: 2vh 1% 2vh 2%;
-			z-index: 2;
-		}
-
-		.scrollbar img{
-			position: absolute;
-			left: 0.5%;
-		}
-
-		.scrollbar-line {
-			border-left: 2px solid #be0303;
-			height: 43vh;
-			position: fixed;
-			left: 1.3%;
-			top: 38%;
-		}
-
-		.right-picture{
-			position: absolute;
-			width: 12%;
-			margin-left: 84%;
-			background-color: #fcf8f8;
-			padding: 1%;
-			border-radius: 5px;
-			border-style: dashed;
-			text-align: center
-		}
-
-		figure > figcaption{
-			text-align: center;
-			z-index:2;
-		}
-
-		.grid{
-			display: grid;
-			grid-template-columns: 45% auto;
-			grid-gap: 1%;
-		}
-
-		article figure{
-			margin-top: -3%;
-			border-style: solid;
-			border-width: 1px;
-			border-radius: 5px;
-			padding: 1%;
-		}
-
-		article figcaption{
-			margin-top: -2.5%;
-			margin-bottom: 1%;
-		}
-
-		.grid figure{
-			padding: 1%;
-		}
-
-		.grid figcaption{
-			margin-top: -4%;
-			margin-bottom: 1%;
-		}
-		
-		.article{
-			width: 60%;
-			margin-left: 20%;
-		}
-
-		article{
-			background-color:  #fefbfb ;/*可以偏米色*/
-			border-radius: 5px;
-			padding: 2% 4%;
-			position: relative;
-			left: 50%;
-			margin: 0 2% 0 2% ;
-			text-align: left;
-			transform: translateX(-50%);
-		}
-
-		article > p{
-			margin: 4% 0;
-		}
-
-		.title{
-			position: relative;
-			background-color:  #980303;
-			border-radius: 5px;
-			width: 25%;
-			left: 16%;
-			margin: 2% 0 -2.5% 0;
-			padding: 2% 1%;
-			font-size: 2vw;
-			line-height: 1.1;
-			color: white;
-			text-align: center;
-			z-index:2;
-		}
-
-		img{
-			width: 100%;
-			height: auto;	
-			position: relative;
+			font-family: Inter, sans-serif;
 		}
 
 	</style>
@@ -191,27 +26,35 @@
 
 <body>
 
-	<nav class="menu">
-		<img src="img/menu.png" alt="menu" style="position: relative;height: 35vh; z-index: 0;">
-		<a href="index_en.html" style="top: 9%;"><img src="img/fire.png">Home</a>
-		<a href="featured_article_en.html" style="top: 34%;"><img src="img/fire.png">AO3!! </a>
-		<a href="featured_article_cn.html" style="top: 59%;"><img src="img/fire.png">中文版</a>
+	<nav>
+		<img src="img/menu.png" alt="menu">
+		<a href="index_en.html" ><img src="img/fire.png">Home</a>
+		<a href="featured_article_en.html"><img src="img/fire.png">AO3!! </a>
+		<a href="featured_article_cn.html"><img src="img/fire.png">中文版</a>
 	</nav>
 
 	<nav>
 	<div class="scrollbar-line"></div>
 	<div class="scrollbar">
-		<a href="#p1_intro" style="margin-top: 8vh">
-			<img src="img/fire.png" >Intro
+		<a href="#p1_intro">
+			<div>Part I</div>
+			<div><img src="img/fire.png"></div>
+			<div>Intro</div>
 		</a>
-		<a href="#p2_start" style="margin-top: 21vh;">
-			<img src="img/fire.png">Where to start
+		<a href="#p2_start">
+			<div>Part II</div>
+			<div><img src="img/fire.png"></div>
+			<div>Where to start</div>
 		</a>
-		<a href="#p3_sharpen" style="margin-top: 34vh;">
-			<img src="img/fire.png">Sharpen your English skill
+		<a href="#p3_sharpen">
+			<div>Part III</div>
+			<div><img src="img/fire.png"></div>
+			<div style="margin-top: -2%; line-height: 1.2;">Sharpen your English skill</div>
 		</a>
-		<a href="#p4_rec" style="margin-top: 49vh;			font-size: 1.5vw; padding: 2vh 0 2vh 7%;" >
-			<img src="img/fire.png">Recommendation
+		<a href="#p4_rec" style="margin-left:-0.2vw;width:103%">
+			<div>Part IV</div>
+			<div><img src="img/fire.png"></div>
+			<div style="font-size: 1.55vw;width: 110%;margin-left: -0.6vw;">Recommendation</div>
 		</a>
 	</div>
 	</nav>
@@ -230,7 +73,7 @@
 		</h2>
 	</div>
 		
-	<figure class="right-picture">
+	<figure class="right-picture" style="width: 12%;margin-left: 84%;padding: 1%;">
 		<img src="img/ao3_logo.png" alt="Archive of Our Own logo"/>
 		<figcaption>AO3 logo</figcaption>
 	</figure>
@@ -276,17 +119,25 @@
 			If you already know the title of a work or the name of an author you are looking for, the fastest way to find it is to feed the information to google and add the keyword “ao3”.  However, when searching for new works in AO3, I highly recommend using the built-in search system of AO3. It has an amazing tagging system that comes with a powerful sort and filter function. There are tags for everything: name of the fandom a work belongs to, the rating of the work, warnings, characters that appear in it, the relationship of those characters, the worldview of the work, and anything the artist wants to include. I recommend checking “warnings” and excluding anything you do not like, this could decrease the chance of encountering works that contain contents you wish to avoid. Altering the setting of “fandoms”, “categories”, and “additional tags” will also help narrow down your search. The “M” and “F” in “categories” represent male and female respectively. Categories let users choose what kinds of relationships they wish to look for in a work.
 		</p>
 
-	<div class="grid">
-		<figure style="padding: 2% 1%;">
+	<div class="side-by-side">
+
+		<figure>
 			<img src="img/start_warning_en.jpg" alt="tag type: Archive Warnings"/>
-			<figcaption>Archive Warnings</figcaption>
+			<figcaption>
+				Archive Warnings
+			</figcaption>
 		</figure>
 
 		<figure>
-			<img src="img/start_categories_en.jpg" alt="tag type:Category" style="margin-top: 2%;" />
-			<figcaption>Category tags</figcaption>
+			<img src="img/start_categories_en.jpg" alt="tag type: Category"/>
+			<figcaption>
+				Category tags 
+			</figcaption>
 		</figure>
+
 	</div>
+
+	<p style="color:#fefbfb;font-size: 1vh; line-height: 1vh;clear: both;"> just to make space and make sure the layout is neat</p>
 		
 		<p>
 			<h3>Other tips</h3>
@@ -363,9 +214,11 @@
 		
 	</article>
 
-</div  style="margin: auto;line-height: 0;" >
-	<figure><!--讓圖片置中，位置標準-文字 -->
-			<img style="vertical-align:middle" id="last" src="img/red_city.png" />
+</div>
+
+	<figure>
+			<img src="img/red_city.png" />
 	</figure>
+	
 </body>
 </html>
