--- a/personal/featured_article_en.html
+++ b/personal/featured_article_en.html
@@ -6,18 +6,21 @@
 	<!-- 英文版!!! -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="feature.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;600;700&family=IBM+Plex+Serif:ital,wght@0,400;0,700;1,400;1,600;1,700&family=Inter:wght@300;400;600;700&family=Josefin+Slab:ital,wght@0,600;0,700;1,400&family=Noticia+Text:wght@400;700&display=swap" rel="stylesheet"> 
 	<style>
-		
+
 		nav>a{
-			font-family: Inter, sans-serif;
+			font-family: "Inter", sans-serif;
 		}
 
 		h1,h2,h3 {
-			font-family:IBM Plex Serif, serif;
+			 font-family: "Josefin Slab", serif;
 		}
 
 		body {
-			font-family: Inter, sans-serif;
+			font-family: "Inter", sans-serif;
 		}
 
 	</style>
@@ -193,12 +196,6 @@
 	
 <div class="article">
 	<article><!-- 之四 -->
-
-		<!--
-		<figure style="text-align: right; ">
-				<img src="img/city.png" />
-		</figure>
-		-->
 		<p>
 			<h3>[Podfic] ain't really quaint</h3>
 			This is a light and humorous story from the Captain America fandom, featuring Steve Rogers (Captain America) and James “Bucky” Barnes (the winter soldier). The podficer quietnight not only has excellent taste when choosing stories to podfic, they also make the voice of each character distinct, which makes it easy to understand dialogs. quietnight is a talented artist who produces fantastic artworks as well as podfics, [Podfic] ain't really quaint features a few of their splendid artwork. 
