--- a/personal/index_en.html
+++ b/personal/index_en.html
@@ -4,7 +4,10 @@
 	<meta charset="utf-8">
 	<title>autobiogrophy</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="home.css">	
+	<link rel="stylesheet" type="text/css" href="home.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;600;700&family=IBM+Plex+Serif:ital,wght@0,400;0,700;1,400;1,600;1,700&family=Inter:wght@300;400;600;700&family=Josefin+Slab:ital,wght@0,600;0,700;1,400&family=Noticia+Text:wght@400;700&display=swap" rel="stylesheet"> 	
 	<style>
 
 		nav>a{
